# faber

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/skills/cross-editor-benchmark/: SKILL.md
.claude/skills/i18n-guardrails/: SKILL.md  check.sh
.claude/skills/index-module/: SKILL.md
.claude/skills/perf-guardrails/: SKILL.md
.github/workflows/: ci.yml
benches/: parse.rs  rope_ops.rs
crates/faber-app/: Cargo.toml
crates/faber-app/locales/: en.toml
crates/faber-app/src/: assets.rs  buffer_view.rs  completion_logic.rs  editor_logic.rs  editor_view.rs  file_finder.rs  file_icon_data.rs  file_icons.rs  file_preview.rs  hover_popover.rs  http.rs  i18n.rs  input_helpers.rs  language_picker.rs  lsp_status.rs  main.rs  markdown_preview.rs  pane.rs  project_search_view.rs  settings_view.rs  sidebar.rs  sidebar_logic.rs  status_bar.rs  symbol_finder.rs  symbol_overlay.rs  theme.rs  welcome_view.rs  workspace.rs
crates/faber-app/src/panels/: diagnostics_panel.rs  mod.rs  references_panel.rs  results_list.rs
crates/faber-app/src/ui/: button.rs  divider.rs  icon.rs  input.rs  key_hint.rs  label.rs  mod.rs  modal.rs  scrollbar.rs  surface.rs
crates/faber-app/tests/: i18n_parity.rs
crates/faber-core/: Cargo.toml
crates/faber-core/proptest-regressions/: pane_tree.txt
crates/faber-core/src/: lib.rs  movement.rs  pane_tree.rs  search.rs  selection.rs  transaction.rs  utf16.rs
crates/faber-editor/: Cargo.toml
crates/faber-editor/benches/: edit_ops.rs  file_index.rs  highlight.rs  markdown.rs  parse.rs  project_search.rs  rope_ops.rs
crates/faber-editor/src/: buffer.rs  edit_history.rs  file_index.rs  highlight.rs  lib.rs  outline.rs  project.rs  project_search.rs  save.rs  syntax.rs
crates/faber-editor/src/markdown/: edit.rs  mod.rs  parse.rs
crates/faber-editor/tests/: editing.rs
crates/faber-index/: Cargo.toml
crates/faber-index/examples/: dump.rs  probe.rs
crates/faber-index/src/: engine.rs  files.rs  lib.rs  module.rs  pipeline.rs  progress.rs  scanner.rs  store.rs  symbols.rs  test_util.rs  trigger.rs  watcher.rs
crates/faber-lang/: Cargo.toml
crates/faber-lang/queries/rust/: outline.scm
crates/faber-lang/src/: language.rs  lib.rs  registry.rs
crates/faber-lsp/: Cargo.toml
crates/faber-lsp/src/: adapter.rs  completion.rs  diagnostics.rs  hover.rs  install.rs  lib.rs  manager.rs  position.rs  server.rs  test_helpers.rs  transport.rs
crates/faber-settings/: Cargo.toml
crates/faber-settings/src/: lib.rs  state.rs
crates/faber-theme/: Cargo.toml
crates/faber-theme/src/: default.rs  lib.rs
crates/felix-app/: Cargo.toml
crates/felix-app/src/: editor_view.rs  file_icon_data.rs  file_icons.rs  main.rs  markdown_preview.rs  settings_view.rs  sidebar.rs  theme.rs  welcome_view.rs  workspace.rs
crates/felix-app/src/ui/: button.rs  divider.rs  icon.rs  mod.rs  scrollbar.rs
crates/felix-core/: Cargo.toml
crates/felix-core/proptest-regressions/: transaction.txt
crates/felix-core/src/: anchor.rs  search.rs  selection.rs  transaction.rs  utf16.rs
crates/felix-editor/: Cargo.toml
crates/felix-editor/benches/: edit_ops.rs  highlight.rs  markdown.rs  parse.rs  rope_ops.rs
crates/felix-editor/src/: buffer.rs  highlight.rs  lib.rs  project.rs  save.rs
crates/felix-editor/src/markdown/: parse.rs
crates/felix-lang/: Cargo.toml
crates/felix-lang/src/: language.rs  lib.rs  registry.rs
crates/felix-settings/: Cargo.toml
crates/felix-settings/src/: lib.rs
crates/felix-theme/: Cargo.toml
crates/felix-theme/src/: default.rs  lib.rs
docs/: indexing-engine-prd.md  indexing-engine-tdd.md  lsp-backlog.md  lsp-session-notes.md  ui-design-spec.md
perf/: baseline.json  bench_baseline.json  bench_gate.sh  budgets.toml  compare.sh  macro.sh
perf/fixtures/: gen.sh
src/: lib.rs  main.rs
