[package]
name = "faber"
version = "0.1.0"
edition = "2024"
description = "An opinionated, GPU-accelerated code editor built in Rust."
license = "MIT"

[[bin]]
name = "faber"
path = "src/main.rs"

[dependencies]
faber-core = { path = "../faber-core" }
faber-editor = { path = "../faber-editor" }
ropey = "1"
faber-settings = { path = "../faber-settings" }
faber-theme = { path = "../faber-theme" }
gpui = "0.2"
rust-embed = "8"
rust-i18n = "3"

[dev-dependencies]
toml = "0.8"
