[package]
name = "faber"
version = "0.1.0"
edition = "2024"
description = "An opinionated, GPU-accelerated code editor built in Rust."
license = "MIT"

[[bin]]
name = "faber"
path = "src/main.rs"

[dependencies]
faber-core = { path = "../faber-core" }
faber-editor = { path = "../faber-editor" }
faber-index = { path = "../faber-index" }
faber-lsp = { path = "../faber-lsp" }
log = "0.4"
ropey = "1"
faber-settings = { path = "../faber-settings" }
faber-theme = { path = "../faber-theme" }
gpui = "0.2"
rust-embed = "8"
rust-i18n = "3"
anyhow = "1"
url = "2"

[dev-dependencies]
toml = "0.8"
tempfile = "3"
bincode = "1"
faber-lang = { path = "../faber-lang" }
