[package]
name = "faber-core"
version = "0.1.0"
edition = "2024"
description = "UI-agnostic core primitives: rope helpers, selection, transaction, search"
license = "MIT"

[dependencies]
ropey = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
proptest = "1"
serde_json = "1"
