[package]
name = "faber-editor"
version = "0.1.0"
edition = "2024"
description = "UI-free editing engine: Document, History, Command dispatch"
license = "MIT"

[lib]
name = "faber_editor"
path = "src/lib.rs"

[[bench]]
name = "rope_ops"
harness = false

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "edit_ops"
harness = false

[[bench]]
name = "highlight"
harness = false

[[bench]]
name = "markdown"
harness = false

[dependencies]
faber-core = { path = "../faber-core" }
faber-lang = { path = "../faber-lang" }
pulldown-cmark = { version = "0.13.4", default-features = false }
ropey = "1"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"

[dev-dependencies]
divan = "0.1"
proptest = "1"
