[package]
name = "faber-editor"
version = "0.1.0"
edition = "2024"
description = "UI-free editing engine: Document, History, Command dispatch"
license = "MIT"

[lib]
name = "faber_editor"
path = "src/lib.rs"

[dependencies]
faber-core = { path = "../faber-core" }
faber-lang = { path = "../faber-lang" }
pulldown-cmark = { version = "0.13.4", default-features = false }
ropey = "1"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
ignore = "0.4"
globset = "0.4"
nucleo-matcher = "0.3.1"
regex = "1.12.4"

[dev-dependencies]
proptest = "1"
tempfile = "3"
