[package]
name = "faber-index"
version = "0.1.0"
edition = "2024"

[dependencies]
faber-core = { path = "../faber-core" }
faber-lang = { path = "../faber-lang" }

# Storage
heed = "0.20"
blake3 = "1"
bincode = "1"

# Concurrency / threading
arc-swap = "1"
crossbeam-channel = "0.5"
num_cpus = "1"

# Filesystem
ignore = "0.4"
notify = "6"
tree-sitter = "0.26"

# Matching / query (shared with faber-editor)
nucleo-matcher = "0.3.1"
regex = "1"

# Utilities
bitflags = "2"
anyhow = "1"
log = "0.4"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"

[[example]]
name = "dump"
path = "examples/dump.rs"

[[example]]
name = "probe"
path = "examples/probe.rs"
