[package]
name = "faber-lang"
version = "0.1.0"
edition = "2024"
description = "Language support: grammar loading, LanguageRegistry"
license = "MIT"

[dependencies]
faber-core = { path = "../faber-core" }
ropey = "1"
serde = { version = "1", features = ["derive"] }
tree-sitter = "0.26"
tree-sitter-md = "0.5"
tree-sitter-rust = "0.24"
